--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apexcharts": "^3.26.0",
     "axios": "^0.21.1",
     "dateformat": "^4.5.1",
+    "draft-js": "^0.11.7",
     "emoji-picker-react": "^3.4.2",
     "flag-icon-css": "^3.5.0",
     "html-react-parser": "^1.2.4",
@@ -32,6 +33,7 @@
     "react-copy-to-clipboard": "^5.0.3",
     "react-csv": "^2.0.3",
     "react-dom": "^17.0.1",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-elastic-carousel": "^0.11.1",
     "react-geetest-captcha": "^1.0.3",
     "react-google-maps": "^9.4.5",
