--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "dateformat": "^4.5.1",
     "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "emoji-picker-react": "^3.4.2",
     "flag-icon-css": "^3.5.0",
     "html-react-parser": "^1.2.4",
