--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "html-react-parser": "^1.2.4",
     "install": "^0.13.0",
     "intl-messageformat-parser": "^6.4.4",
+    "intl-tel-input": "^17.0.13",
     "js-file-download": "^0.4.12",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "node-sass": "^4.14.1",
-    "npm": "^7.5.4",
+    "npm": "^7.17.0",
     "pure-react-carousel": "^1.27.6",
     "qrcode.react": "^1.0.1",
     "query-string": "^7.0.0",
@@ -42,8 +43,10 @@
     "react-google-maps": "^9.4.5",
     "react-html-parser": "^2.0.2",
     "react-intl": "^5.13.2",
+    "react-intl-tel-input": "^8.0.4",
     "react-js-pagination": "^3.0.3",
     "react-loading": "^2.0.3",
+    "react-phone-input-2": "^2.14.0",
     "react-qr-code": "^1.1.1",
     "react-qrcode-logo": "^2.4.0",
     "react-redux": "^7.2.2",
