--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "react-qrcode-logo": "^2.4.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.1",
     "react-slick": "^0.27.14",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
