--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-intl-tel-input": "^8.0.4",
     "react-js-pagination": "^3.0.3",
     "react-loading": "^2.0.3",
+    "react-number-format": "^4.6.3",
     "react-phone-input-2": "^2.14.0",
     "react-qr-code": "^1.1.1",
     "react-qrcode-logo": "^2.4.0",
