--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-code-input": "^3.10.0",
     "react-copy-to-clipboard": "^5.0.3",
+    "react-countdown": "^2.3.2",
     "react-csv": "^2.0.3",
     "react-dom": "^17.0.1",
     "react-draft-wysiwyg": "^1.14.7",
