--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.6.0",
     "apexcharts": "^3.26.0",
     "axios": "^0.21.1",
+    "chokidar": "^3.5.2",
     "dateformat": "^4.5.1",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
@@ -54,7 +55,7 @@
     "react-qrcode-logo": "^2.4.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.1",
+    "react-scripts": "^4.0.3",
     "react-slick": "^0.27.14",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
